deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-app
  template:
    metadata:
      labels:
        app: traffic-app
    spec:
      containers:
        - name: traffic-app
          image: kopalc/periodic-traffic:3.0
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: traffic-app-svc
  labels:
    app: traffic-app
spec:
  selector:
    app: traffic-app
  ports:
    - name: http
      protocol: TCP
      port: 5000
      targetPort: 5000
  type: ClusterIP
