ingress-traffic-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traffic-app-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /status
        pathType: Exact
        backend:
          service:
            name: traffic-app-svc
            port:
              number: 5000
      - path: /metrics
        pathType: Exact
        backend:
          service:
            name: traffic-app-svc
            port:
              number: 5000
      - path: /simulate_burst
        pathType: Exact
        backend:
          service:
            name: traffic-app-svc
            port:
              number: 5000
